fix: overflow about

--- a/src/styles/about-section.css
+++ b/src/styles/about-section.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .about-content {
